moved saved images into web folder

--- a/web/world.html
+++ b/web/world.html
@@ -15,11 +15,11 @@
   <body>
     <div style="background-color:#63C5CF">
       <div class="centre" style="background-color:#63C5CF">
-        <img src="saved/island-1.png">
-        <img src="saved/island-2.png">
-        <img src="saved/island-3.png">
-        <img src="saved/island-4.png">
-        <img src="saved/island-5.png">
+        <img src="island-1.png">
+        <img src="island-2.png">
+        <img src="island-3.png">
+        <img src="island-4.png">
+        <img src="island-5.png">
       </div>
     </div>
   </body>
