fixed background colour

--- a/web/noisey-islands.html
+++ b/web/noisey-islands.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta name="viewport" content="width=device-width">
   <meta name="description" content="Island Generator.">
-  <link rel='shortcut icon' type='image/x-icon' href='favicon.ico'>
+  <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico'>
     <title>Noisey World</title>
   </head>
-  <style>
-    .centre {
-    max-width: 900px;
-    margin: auto;
-  }
-  </style>
-  <body>
-    <div style="background-color:#63C5CF">
-      <div class="centre" style="background-color:#63C5CF">
-        <img src="island-1.png">
-        <img src="island-2.png">
-        <img src="island-3.png">
-        <img src="island-4.png">
-        <img src="island-5.png">
-      </div>
+  <body style="background-color:#63C5CF">
+    <div>
+      <img src="island-1.png">
+      <img src="island-2.png">
+      <img src="island-3.png">
+      <img src="island-4.png">
+      <img src="island-5.png">
     </div>
   </body>
 </html>
