update title and description

--- a/web/noisey-islands.html
+++ b/web/noisey-islands.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta name="description" content="Island Generator.">
+  <meta name="description" content="2D procedurally generated islands from a Go program.">
   <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico'>
-    <title>Noisey World</title>
+    <title>Islands built from a noise generator</title>
   </head>
   <body style="background-color:#63C5CF">
     <div>
